fixed vertical alignment of text in display box

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,7 +4,7 @@ body{
 		background-color: #b3b3b3;
 }
 #image{
-    line-height:650px;
+    line-height:450px;
 		width: 600px;
     height: 450px;
 		border:5px solid black;
